style(merlin-www-main-navigation): Fix alignment of covers in Tatler mobile [ch1178]

--- a/packages/merlin-www-main-navigation/sass/tatler/_promo.scss
+++ b/packages/merlin-www-main-navigation/sass/tatler/_promo.scss
@@ -75,6 +75,7 @@
     width: 50%;
 
     &:nth-child(2) {
+        padding-left: 20px;
         @include tablet-size {
             padding-left: 30px;
         }
